--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -47,6 +47,38 @@
                 }
             }
         }
+
+        .contactsGrid {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-top: 7vh;
+
+            .gridRow1 {
+                display: flex;
+                gap: 20px;
+            }
+
+            .card1 {
+                background-color: var(--bgColor2);
+                color: var(--primaryColor);
+                font-size: $mmFont;
+                font-weight: 500;
+                padding: 20px;
+                border-radius: 10px;
+                width: fit-content;
+                display: flex;
+                justify-content: center;
+                gap: 20px;
+                width: 350px;
+
+                .contactCardSvg {
+                    color: var(--basicWhite);
+                }
+            }
+        }
     }
 
     .gratitude {
