--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,6 +27,9 @@ input {
 
 $secondaryFont: serif;
 
+a {
+  text-decoration: none;
+}
 
 button {
   cursor: pointer;
@@ -37,7 +40,7 @@ button {
 }
 
 .headerText {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: 700;
   color: var(--basicWhite);
   margin-top: 0;
