--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 :root {
   // colors
-  --primaryColor: #f0bd72;
+  --primaryColor: rgb(240, 190, 115);
   --secondaryColor: #5d4b24;
   --bgColor1: #3d3f45;
   --bgColor2: #2b2d35;
