--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,15 +1,15 @@
 @import "../../styles/global.scss";
 
 .about {
-    height: 35vh;
+    height: fit-content;
     padding: 10%;
     background-color: var(--bgColor2);
     margin: 0;
 
     .aboutData {
         display: flex;
-        align-items: flex-start;
         justify-content: center;
+        align-items: flex-start;
         gap: 20px;
         color: var(--basicWhite);
 
