--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -2,16 +2,18 @@
 
 .contacts {
     .contact {
-        height: 55vh;
+        // height: 55vh;
+        height: fit-content;
+        padding-bottom: 100px;
         background-color: var(--bgColor1);
         position: relative;
 
         .contactRow {
             display: flex;
-            gap: 50px;
-            width: 100%;
             align-items: start;
             justify-content: center;
+            gap: 50px;
+            width: 100%;
 
             .straightLine {
                 width: 100%;
@@ -31,10 +33,7 @@
         }
 
         .socialIcons {
-            display: flex;
             gap: 20px;
-            justify-content: center;
-            align-items: center;
 
 
             .socialIcon {
@@ -49,10 +48,8 @@
         }
 
         .contactsGrid {
-            display: flex;
+
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
             gap: 20px;
             margin-top: 7vh;
 
@@ -82,11 +79,20 @@
     }
 
     .gratitude {
-        height: 35vh;
+        // height: 35vh;
+        height: fit-content;
+        padding: 100px 0;
         background-color: var(--bgColor2);
-        display: flex;
-        justify-content: center;
-        align-items: center;
         color: var(--primaryColor);
+        font-family: $secondaryFont;
+    }
+}
+
+@media(max-width:1100px) {
+    .contacts {
+
+        .contact .contactsGrid .gridRow1 {
+            flex-direction: column;
+        }
     }
 }
