--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -2,20 +2,16 @@
 
 .skills {
     background-color: var(--bgColor2);
-    // max-height: 80vh;
     padding-bottom: 100px;
     margin: 0;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
 
     .skillsHeader {
         text-align: center;
     }
 
     .skillCards {
-        width: 60vw;
         display: grid;
         justify-content: center;
         grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -24,9 +20,6 @@
         .skillCard {
             width: 180px;
             height: 200px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             flex-direction: column;
             background-color: var(--bgColor1);
             border-radius: 10px;
@@ -45,6 +38,16 @@
             .skillName {
                 font-weight: 500;
             }
+        }
+    }
+
+}
+
+@media(max-width:1100px) {
+    .skills {
+
+        .skillCards {
+            grid-template-columns: 1fr 1fr;
         }
     }
 }
