--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -51,4 +51,36 @@
     }
   }
 
+  .menuIcon {
+    display: none;
+  }
+
+}
+
+@media(max-width:800px) {
+  .header {
+    padding: 20px 50px;
+
+    .menuIcon {
+      color: var(--basicWhite);
+      display: block;
+      width: 20px;
+      height: 20px;
+    }
+
+    .headerOptions,
+    .headerInputDiv {
+      display: none;
+    }
+  }
+}
+
+@media(max-width:400px) {
+  .header {
+    padding: 10px 30px;
+
+    .logoImg {
+      width: 60px;
+    }
+  }
 }
