--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -51,3 +51,27 @@
         }
     }
 }
+
+@media(max-width:450px) {
+    .skills .skillCards {
+        grid-template-columns: 1fr;
+
+        .skillCard .skillName {
+            font-size: $sFont;
+            margin-top: 20px;
+        }
+    }
+}
+
+@media(max-width:600px) {
+    .skills .skillCards .skillCard {
+        width: 150px;
+        height: 170px;
+        padding-bottom: 10px;
+
+        .skillImage {
+            height: 110px;
+            width: 100px;
+        }
+    }
+}
