--- a/src/components/testimonial/testimonial.scss
+++ b/src/components/testimonial/testimonial.scss
@@ -11,7 +11,6 @@
         gap: 50px;
         width: 100%;
         height: 100%;
-
     }
 
     .backBox {
@@ -58,6 +57,38 @@
             .testimonialAuthor {
                 font-size: $lFont;
                 font-family: $secondaryFont;
+            }
+        }
+    }
+}
+
+@media(max-width:600px) {
+    .testimonial {
+        padding-left: 5%;
+
+        .testimonialData {
+            width: 100%;
+            margin-top: 200px;
+
+            .testimonialPara {
+                line-height: 1.2;
+                font-size: $msFont;
+
+                .testimonialAuthor {
+                    font-size: $sFont;
+                    font-family: serif;
+                }
+            }
+
+        }
+
+        .backBox {
+            height: 30%;
+            width: 65%;
+
+            .testimonialImg {
+                height: 135%;
+                width: 90%;
             }
         }
     }
