--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -12,6 +12,7 @@
         align-items: flex-start;
         gap: 20px;
         color: var(--basicWhite);
+        font-size: $mmFont;
 
         .straightLine {
             width: 100px;
