--- a/src/components/testimonial/testimonial.scss
+++ b/src/components/testimonial/testimonial.scss
@@ -53,6 +53,7 @@
         .testimonialPara {
             margin-top: -10px;
             line-height: 1.5;
+            font-size: $mmFont;
 
             .testimonialAuthor {
                 font-size: $lFont;
