--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,11 +1,12 @@
 :root {
   // colors
-  --primaryColor: rgb(240, 190, 115);
+  --primaryColor: #f0be73;
   --secondaryColor: #5d4b24;
   --bgColor1: #3d3f45;
   --bgColor2: #2b2d35;
+  --overlayBg: #80808099;
   --basicWhite: white;
-  --halfWhite: rgba(255, 255, 255, 0.7);
+  --halfWhite: #ffffffb3;
 
 }
 
