--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,6 +6,7 @@
   align-items: center;
   padding: 20px 100px;
   background-color: var(--bgColor1);
+  position: relative;
 
   .logoImg {
     height: 80%;
