--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -40,7 +40,7 @@
                     position: absolute;
                     height: 100%;
                     width: 100%;
-                    background-color: rgba(128, 128, 128, 0.6);
+                    background-color: var(--overlayBg);
                     flex-direction: column;
 
 
@@ -51,6 +51,8 @@
                         width: 80%;
                         text-align: center;
                         white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
 
                     .portfolioIntro {
@@ -70,7 +72,7 @@
                         border-radius: 5px;
                         border: none;
                         color: var(--bgColor1);
-                        font-size: $xsFont;
+                        font-size: $msFont;
                         padding: 5px 10px;
                         font-weight: 600;
                         gap: 5px;
@@ -116,6 +118,7 @@
                         padding: 3px 5px;
                         font-weight: 500;
                         gap: 5px;
+                        font-size: $xsFont;
                     }
                 }
             }
