--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,8 +9,8 @@
   position: relative;
 
   .logoImg {
-    height: 80%;
-    width: 80px;
+    height: 100%;
+    width: 140px;
     margin: 0;
   }
 
@@ -45,6 +45,7 @@
       font-size: $sFont;
       outline: none;
       color: var(--basicWhite);
+      z-index: 1;
 
       &::placeholder {
         color: var(--halfWhite);
@@ -81,7 +82,7 @@
     padding: 10px 30px;
 
     .logoImg {
-      width: 60px;
+      width: 100px;
     }
   }
 }
