--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,8 @@
   --overlayBg: #80808099;
   --basicWhite: white;
   --halfWhite: #ffffffb3;
+  --boxShadow1: #00000030;
+  --boxShadow2: #0000003b;
 
 }
 
@@ -60,4 +62,8 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.shadowDiv {
+  box-shadow: var(--boxShadow1) 0px 10px 20px, var(--boxShadow2) 0px 6px 6px;
 }
