--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -17,6 +17,7 @@
   .headerOptions {
     display: flex;
     gap: 20px;
+    z-index: 1;
 
     .headerOptionButton {
       background-color: transparent;
