--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -95,7 +95,7 @@
             }
 
             .expComp {
-                font-size: $mFont;
+                font-size: $sFont;
             }
         }
 
@@ -104,7 +104,7 @@
             padding-left: 25px;
 
             .expCompAdd {
-                font-size: $sFont;
+                font-size: $msFont;
             }
 
             .expCompText {
