--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -36,7 +36,7 @@
 
         .aboutPara {
             line-height: 1.2;
-            font-size: $sFont;
+            font-size: $msFont;
         }
     }
 }
