--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -65,9 +65,11 @@
 
 @media(max-width:600px) {
     .skills .skillCards .skillCard {
-        width: 150px;
-        height: 170px;
+        width: 220px;
+        height: 120px;
         padding-bottom: 10px;
+        justify-content: space-around;
+        flex-direction: row;
 
         .skillImage {
             height: 110px;
