--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -107,10 +107,10 @@
             margin-top: 20px;
 
             .card1 {
-                font-size: $xsFont;
+                font-size: $msFont;
                 padding: 15px;
                 gap: 15px;
-                width: 250px;
+                width: 260px;
             }
         }
 
