--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,15 @@
   --boxShadow1: #00000030;
   --boxShadow2: #0000003b;
 
+
+  // light
+  --primaryColorLight: #457b9d;
+  --secondaryColorLight: black;
+  --bgColor1Light: #457b9d1a;
+  --bgColor2Light: white;
+  --basicWhiteLight: #05445E;
+  --overlayBgLight: #ffffff99;
+
 }
 
 // fonts-sizes
