--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./styles/global.scss";
+
 ::-webkit-scrollbar {
   width: 5px;
   height: 3px;
@@ -10,4 +12,28 @@
 
 ::-webkit-scrollbar-track {
   background-color: var(--bgColor2);
+}
+
+.app {
+  position: relative;
+}
+
+.themeButton {
+  position: fixed;
+  bottom: 50px;
+  right: 30px;
+  z-index: 1;
+  background-color: var(--bgColor2Light);
+  color: var(--primaryColorLight);
+  border: none;
+  border-radius: 100px;
+  height: 80px;
+  width: 80px;
+  font-size: $mFont;
+  font-weight: 500;
+}
+
+.themeButton1 {
+  background-color: var(--bgColor2);
+  color: var(--primaryColor);
 }
