--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -86,6 +86,51 @@
     }
 }
 
+.lightApp .contacts {
+    .contact {
+        background-color: var(--bgColor1Light);
+
+        .contactRow {
+            .straightLine {
+                background-color: var(--primaryColorLight);
+            }
+
+            .contactHead {
+                color: var(--primaryColorLight);
+            }
+        }
+
+        .contactRow1 {}
+
+        .socialIcons {
+
+            .socialIcon {
+                color: var(--basicWhiteLight);
+
+            }
+        }
+
+        .contactsGrid {
+
+            .gridRow1 {}
+
+            .card1 {
+                background-color: var(--bgColor2Light);
+                color: var(--primaryColorLight);
+
+                .contactCardSvg {
+                    color: var(--basicWhiteLight);
+                }
+            }
+        }
+    }
+
+    .gratitude {
+        background-color: var(--bgColor2Light);
+        color: var(--primaryColorLight);
+    }
+}
+
 @media(max-width:1100px) {
     .contacts {
 
