--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -57,10 +57,27 @@
   .menuIcon {
     display: none;
   }
-
 }
 
-@media(max-width:800px) {
+.lightApp .header {
+  background-color: var(--bgColor1Light);
+
+  .headerOptions {
+    .headerOptionButton {
+      color: var(--secondaryColorLight);
+    }
+  }
+
+  .headerInputDiv {
+    background-color: var(--secondaryColorLight);
+
+    .headerInput {
+      background-color: var(--secondaryColorLight);
+    }
+  }
+}
+
+@media (max-width: 800px) {
   .header {
     padding: 20px 20px;
 
@@ -78,7 +95,7 @@
   }
 }
 
-@media(max-width:400px) {
+@media (max-width: 400px) {
   .header {
     padding: 10px 10px;
 
