--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -43,6 +43,26 @@
 
 }
 
+.lightApp .skills {
+    background-color: var(--bgColor2Light);
+
+    .skillsHeader {
+        color: var(--primaryColorLight);
+    }
+
+    .skillCards {
+        .skillCard {
+            background-color: var(--bgColor1Light);
+            color: var(--basicWhiteLight);
+
+            &:hover {
+                background-color: var(--primaryColorLight);
+            }
+        }
+    }
+
+}
+
 @media(max-width:1100px) {
     .skills {
 
