font link and animation fix

--- a/src/components/nameImage/nameImage.scss
+++ b/src/components/nameImage/nameImage.scss
@@ -20,7 +20,7 @@
             font-size: 3rem;
             font-weight: 600;
             color: var(--primaryColor);
-            font-family: serif;
+            font-family: $secondaryFont;
         }
 
         .detailWork {
