--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -34,10 +34,10 @@ $xxlFont: 2rem;
 body,
 button,
 input {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Averia Sans Libre';
 }
 
-$secondaryFont: serif;
+$secondaryFont: 'Averia Serif Libre';
 
 a {
   text-decoration: none;
